tests/zer_fail/dalpha11_reset_args.zer
// EXPECTED: compile error
// @cpu_reset takes no arguments

i32 main() {
    @cpu_reset(1);  // error: takes no args
    return 0;
}
